2006-01-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader), (AudioSinkSA...RingReader.RingReader),
	(AudioSinkSA...RingReader.pause), (AudioSinkSA...RingReader.stop),
	(AudioSinkSA...RingReader.read),
	(AudioSinkSA...RingReader.RingBufferSA.play),
	(AudioSinkSA...RingReader.RingBufferSA),
	(AudioSinkSA...RingReader.RingBufferSA.pause),
	(AudioSinkSA...RingReader.RingBufferSA.stop),
	(AudioSinkSA...RingReader.RingBufferSA.read):
	Implement read() for IE JVM.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* TODO:
	* src/com/fluendo/plugin/Queue.java: (Queue), (Queue.clearQueue),
	(Queue.Pad):
	Handle EOS gracefully.

2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/jst/Bus.java: (Bus.peek):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline.SortedEnumerator),
	(Pipeline.SortedEnumerator.queueNextElement):
	* src/com/fluendo/player/Status.java:
	* src/com/fluendo/plugin/Queue.java: (Queue.Pad):
	  Fix Vector calls to work with 1.1 API - partially fixes applet
	  in Explorer

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.stop):
	Print some errors when unimplemented methods are called.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.paint):
	Don't try to render with bogus width/height values.

2006-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	* TODO:
	  update
	* build.xml:
	  build non-jikes with correct debug as well

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.useClock),
	(Pipeline.add), (Pipeline), (Pipeline.remove):
	Don't accept null elements in add and remove.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado), (Cortado.init),
	(Cortado.handleMessage):
	Cleanups.
	Pause pipeline while buffering.
	
	* src/com/fluendo/plugin/AudioSink.java: